--- a/gentle-message-stream-52-99-main/index.html
+++ b/gentle-message-stream-52-99-main/index.html
@@ -4,10 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QwiXEd360°Suite | Career Development Suite</title>
-    <meta name="description" content="QwiXEd360°Suite - AI-powered career development suite with resume building, ATS optimization, certifications, and career path planning" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>Mahayudh | Career Development Suite</title>
+    <meta name="description" content="Mahayudh" />
+
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
